--- a/pom.xml
+++ b/pom.xml
@@ -55,7 +55,7 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-release-plugin</artifactId>
         <configuration>
-          <tagBase>https://npanday.svn.codeplex.com/svn/releases/</tagBase>		
+          <tagBase>https://npanday.svn.codeplex.com/svn/npanday-its/releases/</tagBase>		
           <systemProperties>
             <property>
               <name>npanday.version</name>
