--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-release-plugin</artifactId>
+        <version>2.0</version>
         <configuration>
           <tagBase>https://npanday.svn.codeplex.com/svn/npanday-its/releases/</tagBase>		
           <systemProperties>
