--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
   <groupId>npanday.its</groupId>
   <artifactId>npanday-its</artifactId>
-  <version>1.2.1-SNAPSHOT</version>
+  <version>1.2.2-incubating-SNAPSHOT</version>
 
   <name>NPanday Integration Tests Parent</name>
 
@@ -94,9 +94,9 @@
   </properties>
 
   <scm>
-    <url>https://npanday.svn.codeplex.com/svn/npanday-its/trunk/</url>
-    <connection>scm:svn:https://npanday.svn.codeplex.com/svn/npanday-its/trunk/</connection>
-    <developerConnection>scm:svn:https://npanday.svn.codeplex.com/svn/npanday-its/trunk/</developerConnection>
+    <url>http://svn.apache.org/viewvc/incubator/npanday/npanday-its/trunk/</url>
+    <connection>scm:svn:http://svn.apache.org/repos/asf/incubator/npanday/npanday-its/trunk/</connection>
+    <developerConnection>scm:svn:https://svn.apache.org/repos/asf/incubator/npanday/npanday-its/trunk/</developerConnection>
   </scm>
 
   <profiles>
