--- a/pom.xml
+++ b/pom.xml
@@ -56,7 +56,7 @@
         <artifactId>maven-release-plugin</artifactId>
         <version>2.0</version>
         <configuration>
-          <tagBase>https://npanday.svn.codeplex.com/svn/npanday-its/releases/</tagBase>		
+          <tagBase>https://svn.apache.org/repos/asf/incubator/npanday/npanday-its/tags/</tagBase>		
           <systemProperties>
             <property>
               <name>npanday.version</name>
