--- a/src/test/resources/NPanday330MVC2010ProjectTest/pom.xml
+++ b/src/test/resources/NPanday330MVC2010ProjectTest/pom.xml
@@ -1,10 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns="http://maven.apache.org/POM/4.0.0">
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"
+         xmlns="http://maven.apache.org/POM/4.0.0">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>Microsoft.NPanday330MVC2010ProjectTest</groupId>
+  <parent>
+    <groupId>NPanday.ITs</groupId>
+    <artifactId>NPanday.ITs.Parent</artifactId>
+    <version>1-SNAPSHOT</version>
+  </parent>
+  <groupId>NPanday.ITs.NPanday330MVC2010ProjectTest</groupId>
   <artifactId>NPanday330MVC2010ProjectTest-parent</artifactId>
   <packaging>pom</packaging>
-  <name>Microsoft.NPanday330MVC2010ProjectTest : NPanday330MVC2010ProjectTest-parent</name>
+  <name>NPanday.ITs.NPanday330MVC2010ProjectTest :NPanday330MVC2010ProjectTest-parent</name>
   <version>1.0-SNAPSHOT</version>
   <modules>
     <module>NPanday330MVC2010ProjectTest</module>
