--- a/src/test/resources/NPandayIT12549/NPandayIT12549.csproj
+++ b/src/test/resources/NPandayIT12549/NPandayIT12549.csproj
@@ -95,6 +95,7 @@
     <WebReferences Include="Web References\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
+  <Import Project="$(MSBuildBinPath)\Microsoft.WinFX.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
