[NPANDAY-334] Update Integration Tests in relation with the UAC & PAB removal enhancements Updated webreference sample test.
git-svn-id: https://svn.apache.org/repos/asf/incubator/npanday/npanday-its/trunk@1050256 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/test/resources/ClassLibraryWithWebReference/ClassLibraryWithWebReference/pom.xml
+++ b/src/test/resources/ClassLibraryWithWebReference/ClassLibraryWithWebReference/pom.xml
@@ -41,12 +41,12 @@
         <configuration>
           <webreferences>
             <webreference>
-              <namespace>com.amazon.soap</namespace>
-              <path>Web References/com.amazon.soap/AmazonSearch.wsdl</path>
-              <output>Web References/com.amazon.soap</output>
+              <namespace>net.webservicex.www</namespace>
+              <path>WebReferences/net.webservicex.www/sendsmsworld.wsdl</path>
+              <output>WebReferences/net.webservicex.www/</output>
             </webreference>
           </webreferences>
-        </configuration>
+        </configuration>      
       </plugin>
     </plugins>
   </build>
