--- a/pom.xml
+++ b/pom.xml
@@ -69,29 +69,6 @@ under the License.
         </executions>
       </plugin>
       <plugin>
-        <groupId>org.apache.rat</groupId>
-        <artifactId>apache-rat-plugin</artifactId>
-        <version>0.7</version>
-        <configuration>
-          <excludes>
-            <exclude>**/**.properties</exclude>
-            <exclude>**/**.resx</exclude>
-			<exclude>**/**.md5</exclude>
-			<exclude>**/**.sha1</exclude>
-			<exclude>**/**.x-properties</exclude>
-			<exclude>**/**.snk</exclude>
-          </excludes>
-        </configuration>
-        <executions>
-           <execution>
-             <phase>verify</phase>
-             <goals>
-               <goal>check</goal>
-             </goals>
-           </execution>
-        </executions>
-      </plugin>
-      <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-release-plugin</artifactId>
         <version>2.0</version>
@@ -157,7 +134,37 @@ under the License.
         </plugins>
       </build>
     </profile>
-	<profile>
+    <profile>
+      <id>pre-release</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.rat</groupId>
+            <artifactId>apache-rat-plugin</artifactId>
+            <version>0.7</version>
+            <configuration>
+              <excludes>
+                <exclude>**/**.properties</exclude>
+                <exclude>**/**.resx</exclude>
+                <exclude>**/**.md5</exclude>
+                <exclude>**/**.sha1</exclude>
+                <exclude>**/**.x-properties</exclude>
+                <exclude>**/**.snk</exclude>
+              </excludes>
+            </configuration>
+            <executions>
+               <execution>
+                 <phase>verify</phase>
+                 <goals>
+                   <goal>check</goal>
+                 </goals>
+               </execution>
+            </executions>
+          </plugin>		
+        </plugins>
+      </build>
+    </profile>
+    <profile>
       <id>npanday-release</id>
       <build>
         <plugins>
