updated url in Distribution Management
git-svn-id: https://svn.apache.org/repos/asf/incubator/npanday/npanday-its/trunk@1063215 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -188,15 +188,9 @@ under the License.
   </profiles>
    
   <distributionManagement>
-    <snapshotRepository>
-      <id>npanday.snapshots</id>
-      <name>NPanday Snapshots Repository</name>
-      <url>${npanday.snapshots.url}</url>
-    </snapshotRepository>
     <repository>
-      <id>npanday.releases</id>
-      <name>NPanday Releases Repository</name>
-      <url>${npanday.releases.url}</url>
+      <id>vmbuild.staging</id>
+      <url>http://vmbuild.apache.org/archiva/repository/staged-npanday/</url>
     </repository>
   </distributionManagement>
   
