--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@ under the License.
   <modelVersion>4.0.0</modelVersion>
   <groupId>npanday.its</groupId>
   <artifactId>npanday-its</artifactId>
-  <version>2.0-SNAPSHOT</version>
+  <version>1.3-incubating-SNAPSHOT</version>
 
   <name>NPanday Integration Tests Parent</name>
 
