--- a/src/test/resources/NPANDAY_328_VS2010WpfProjectSupportTest/pom.xml
+++ b/src/test/resources/NPANDAY_328_VS2010WpfProjectSupportTest/pom.xml
@@ -66,7 +66,7 @@ under the License.
           <embeddedResources>
             <embeddedResource>
               <sourceFile>Properties\Resources.resx</sourceFile>
-              <name>NPANDAY_328_VS2010WpfProjectSupportTest.Properties.Resources</name>
+              <name>WpfApplication8.Properties.Resources</name>
             </embeddedResource>
           </embeddedResources>
         </configuration>
