* added additional assert for NPanday-377 * reverted commit on IntegrationTestSuite
git-svn-id: https://svn.apache.org/repos/asf/incubator/npanday/npanday-its/trunk@1096141 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/test/resources/NPANDAY_377_WithNPandaySettingsPathTest/NPANDAY_377_WithNPandaySettingsPathTest/pom.xml
+++ b/src/test/resources/NPANDAY_377_WithNPandaySettingsPathTest/NPANDAY_377_WithNPandaySettingsPathTest/pom.xml
@@ -27,6 +27,6 @@
     </plugins>
   </build>
   <properties>
-    <npanday.settings>${basedir}/path</npanday.settings>
+    <npanday.settings>${basedir}</npanday.settings>
   </properties>  
 </project>
