--- a/src/test/resources/NPandayIT0003NetModuleTransitiveDependencyTest/dependency/pom.xml
+++ b/src/test/resources/NPandayIT0003NetModuleTransitiveDependencyTest/dependency/pom.xml
@@ -35,7 +35,7 @@ under the License.
     <sourceDirectory>src/main/csharp</sourceDirectory>
     <plugins>
       <plugin>
-        <groupId>npanday.plugin</groupId>
+        <groupId>org.apache.npanday.plugin</groupId>
         <artifactId>maven-compile-plugin</artifactId>
         <extensions>true</extensions>
       </plugin>
