--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@ specific language governing permissions and limitations
 under the License.
 -->
   <modelVersion>4.0.0</modelVersion>
-  <groupId>npanday.its</groupId>
+  <groupId>org.apache.npanday.its</groupId>
   <artifactId>npanday-its</artifactId>
   <version>2.0-SNAPSHOT</version>
 
