--- a/src/test/resources/NPandayIT0006StockingHandlersTest/pom.xml
+++ b/src/test/resources/NPandayIT0006StockingHandlersTest/pom.xml
@@ -31,12 +31,12 @@ under the License.
   <build>
     <plugins>
       <plugin>
-        <groupId>npanday.plugin</groupId>
+        <groupId>org.apache.npanday.plugin</groupId>
         <artifactId>maven-compile-plugin</artifactId>
         <extensions>true</extensions>
       </plugin>
       <plugin>
-        <groupId>npanday.plugin</groupId>
+        <groupId>org.apache.npanday.plugin</groupId>
         <artifactId>maven-xsd-plugin</artifactId>
         <executions>
           <execution>
