--- a/src/test/resources/NPandayIT0012VBWebAppTest/pom.xml
+++ b/src/test/resources/NPandayIT0012VBWebAppTest/pom.xml
@@ -31,7 +31,7 @@ under the License.
     <sourceDirectory>.</sourceDirectory>
     <plugins>
       <plugin>
-        <groupId>npanday.plugin</groupId>
+        <groupId>org.apache.npanday.plugin</groupId>
         <artifactId>maven-compile-plugin</artifactId>
         <version>${npanday.version}</version>
 		<extensions>true</extensions>
@@ -77,7 +77,7 @@ under the License.
         </configuration>
       </plugin>
       <plugin>
-        <groupId>npanday.plugin</groupId>
+        <groupId>org.apache.npanday.plugin</groupId>
         <artifactId>maven-resgen-plugin</artifactId>
         <extensions>true</extensions>
         <configuration>
