--- a/src/test/resources/NPandayIT0013WebAppInstallTest/pom.xml
+++ b/src/test/resources/NPandayIT0013WebAppInstallTest/pom.xml
@@ -32,7 +32,7 @@ under the License.
     <sourceDirectory>.</sourceDirectory>
     <plugins>
       <plugin>
-        <groupId>npanday.plugin</groupId>
+        <groupId>org.apache.npanday.plugin</groupId>
         <artifactId>maven-compile-plugin</artifactId>
         <version>${npanday.version}</version>
         <extensions>true</extensions>
