--- a/src/test/resources/NPandayIT0035VBRootNamespaceTest/pom.xml
+++ b/src/test/resources/NPandayIT0035VBRootNamespaceTest/pom.xml
@@ -32,7 +32,7 @@ under the License.
     <sourceDirectory>src/main/vb</sourceDirectory>
     <plugins>
       <plugin>
-        <groupId>npanday.plugin</groupId>
+        <groupId>org.apache.npanday.plugin</groupId>
         <artifactId>maven-compile-plugin</artifactId>
         <extensions>true</extensions>
         <configuration>
