--- a/src/test/resources/NPandayIT0040IntraProjectDependencyTest/ClassLibrary3/pom.xml
+++ b/src/test/resources/NPandayIT0040IntraProjectDependencyTest/ClassLibrary3/pom.xml
@@ -32,7 +32,7 @@ under the License.
     <sourceDirectory>./</sourceDirectory>
     <plugins>
       <plugin>
-        <groupId>npanday.plugin</groupId>
+        <groupId>org.apache.npanday.plugin</groupId>
         <artifactId>maven-compile-plugin</artifactId>
         <version>${npanday.version}</version>
         <extensions>true</extensions>
@@ -45,7 +45,7 @@ under the License.
         </configuration>
       </plugin>
       <plugin>
-        <groupId>npanday.plugin</groupId>
+        <groupId>org.apache.npanday.plugin</groupId>
         <artifactId>maven-test-plugin</artifactId>
         <version>${npanday.version}</version>
         <extensions>true</extensions>
