[NPANDAY-383] update ITs to use 'org.apache.npanday.plugins' instead of '*.plugin'
git-svn-id: https://svn.apache.org/repos/asf/incubator/npanday/npanday-its/trunk@1098952 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/test/resources/NPANDAY_208_MsBuildCopyReferencesTest/pom.xml
+++ b/src/test/resources/NPANDAY_208_MsBuildCopyReferencesTest/pom.xml
@@ -48,7 +48,7 @@ under the License.
     <sourceDirectory>./</sourceDirectory>
     <plugins>
       <plugin>
-        <groupId>org.apache.npanday.plugin</groupId>
+        <groupId>org.apache.npanday.plugins</groupId>
         <artifactId>NPanday.Plugin.Msbuild.JavaBinding</artifactId>
         <executions>
           <execution>
