--- a/src/test/resources/NPANDAY_121_ResGenWithErrorInFileNameTest/npanday-9903/pom.xml
+++ b/src/test/resources/NPANDAY_121_ResGenWithErrorInFileNameTest/npanday-9903/pom.xml
@@ -32,7 +32,7 @@ under the License.
     <sourceDirectory>.</sourceDirectory>
     <plugins>
       <plugin>
-        <groupId>org.apache.npanday.plugin</groupId>
+        <groupId>org.apache.npanday.plugins</groupId>
         <artifactId>maven-compile-plugin</artifactId>
         <version>${npanday.version}</version>
         <extensions>true</extensions>
@@ -77,7 +77,7 @@ under the License.
         </configuration>
       </plugin>
       <plugin>
-        <groupId>org.apache.npanday.plugin</groupId>
+        <groupId>org.apache.npanday.plugins</groupId>
         <artifactId>maven-resgen-plugin</artifactId>
         <version>${npanday.version}</version>
         <extensions>true</extensions>
