--- a/src/test/resources/NPandayIT0007XSDVerificationTest/pom.xml
+++ b/src/test/resources/NPandayIT0007XSDVerificationTest/pom.xml
@@ -33,12 +33,12 @@ under the License.
     <testSourceDirectory>src/test/csharp</testSourceDirectory>  
     <plugins> 
       <plugin> 
-        <groupId>org.apache.npanday.plugin</groupId>
+        <groupId>org.apache.npanday.plugins</groupId>
         <artifactId>maven-compile-plugin</artifactId>  
         <extensions>true</extensions> 
       </plugin>  
       <plugin> 
-        <groupId>org.apache.npanday.plugin</groupId>
+        <groupId>org.apache.npanday.plugins</groupId>
         <artifactId>maven-xsd-plugin</artifactId>  
         <executions> 
           <execution> 
