--- a/src/test/resources/NPandayIT0011SnapshotResolutionTest/non-unique/pom.xml
+++ b/src/test/resources/NPandayIT0011SnapshotResolutionTest/non-unique/pom.xml
@@ -49,7 +49,7 @@ under the License.
     <testSourceDirectory>src/test/csharp</testSourceDirectory>
     <plugins>
       <plugin>
-        <groupId>org.apache.npanday.plugin</groupId>
+        <groupId>org.apache.npanday.plugins</groupId>
         <artifactId>maven-compile-plugin</artifactId>
         <version>${npanday.version}</version>
         <extensions>true</extensions>
