--- a/src/test/resources/NPandayIT0029RemoteRepoTest/pom.xml
+++ b/src/test/resources/NPandayIT0029RemoteRepoTest/pom.xml
@@ -33,7 +33,7 @@ under the License.
     <sourceDirectory>src/main/csharp</sourceDirectory>
     <plugins>
       <plugin>
-        <groupId>org.apache.npanday.plugin</groupId>
+        <groupId>org.apache.npanday.plugins</groupId>
         <artifactId>maven-compile-plugin</artifactId>
         <extensions>true</extensions>
       </plugin>
