updated version to 1.4.0-incubating-SNAPSHOT in preparation for the release
git-svn-id: https://svn.apache.org/repos/asf/incubator/npanday/npanday-its/trunk@1100063 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@ under the License.
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.apache.npanday.its</groupId>
   <artifactId>npanday-its</artifactId>
-  <version>2.0-SNAPSHOT</version>
+  <version>1.4.0-incubating-SNAPSHOT</version>
 
   <name>NPanday Integration Tests Parent</name>
 
