added/updated license headers
git-svn-id: https://svn.apache.org/repos/asf/incubator/npanday/npanday-its/trunk@1100066 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -150,6 +150,7 @@ under the License.
                 <exclude>**/**.sha1</exclude>
                 <exclude>**/**.x-properties</exclude>
                 <exclude>**/**.snk</exclude>
+                <exclude>**/**.sln</exclude>                
               </excludes>
             </configuration>
             <executions>
