add missing parents
git-svn-id: https://svn.apache.org/repos/asf/incubator/npanday/npanday-its/trunk@1101312 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/test/resources/NPANDAY_377_WithCustomNPandaySettingsFileTest/pom.xml
+++ b/src/test/resources/NPANDAY_377_WithCustomNPandaySettingsFileTest/pom.xml
@@ -19,6 +19,11 @@ under the License.
 -->
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns="http://maven.apache.org/POM/4.0.0">
   <modelVersion>4.0.0</modelVersion>
+  <parent>
+    <groupId>NPanday.ITs</groupId>
+    <artifactId>NPanday.ITs.Parent</artifactId>
+    <version>1-SNAPSHOT</version>
+  </parent>
   <groupId>Microsoft.NPANDAY377WithCustomNPandaySettingsFileTest</groupId>
   <artifactId>NPANDAY377WithCustomNPandaySettingsFileTest-parent</artifactId>
   <packaging>pom</packaging>
