--- a/src/test/resources/NPandayIT0012VBWebAppTest/pom.xml
+++ b/src/test/resources/NPandayIT0012VBWebAppTest/pom.xml
@@ -78,6 +78,13 @@ under the License.
       </plugin>
       <plugin>
         <groupId>org.apache.npanday.plugins</groupId>
+        <artifactId>maven-aspx-plugin</artifactId>
+        <configuration>
+          <frameworkVersion>3.0</frameworkVersion>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.npanday.plugins</groupId>
         <artifactId>maven-resgen-plugin</artifactId>
         <extensions>true</extensions>
         <configuration>
