add repository until a better example can be constructed
git-svn-id: https://svn.apache.org/repos/asf/incubator/npanday/npanday-its/trunk@1210882 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/test/resources/NPANDAY_140_ConflictingExtensionsTest/pom.xml
+++ b/src/test/resources/NPANDAY_140_ConflictingExtensionsTest/pom.xml
@@ -61,4 +61,22 @@ under the License.
       </dependency>
     </dependencies>
   </dependencyManagement>
+  <pluginRepositories>
+    <pluginRepository>
+      <id>servebox</id>
+      <url>http://maven.servebox.org/repository</url>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+    </pluginRepository>
+  </pluginRepositories>
+  <repositories>
+    <repository>
+      <id>servebox</id>
+      <url>http://maven.servebox.org/repository</url>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+    </repository>
+  </repositories>
 </project>
