ability to turn on -X for Maven
git-svn-id: https://svn.apache.org/repos/asf/incubator/npanday/npanday-its/trunk@1211799 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,10 @@ under the License.
               <name>debug.maven</name>
               <value>${debug.maven}</value>
             </property>
+            <property>
+              <name>npanday.log.debug</name>
+              <value>${npanday.log.debug}</value>
+            </property>
           </systemProperties>
         </configuration>
       </plugin>
