--- a/src/test/resources/NPANDAY_488_MSDeployPackageSimpleWebApp/pom.xml
+++ b/src/test/resources/NPANDAY_488_MSDeployPackageSimpleWebApp/pom.xml
@@ -12,12 +12,16 @@
     <version>1-SNAPSHOT</version>
   </parent>
  
-  <groupId>NPANDAY_488_MSDeployPackageSimpleWebApp</groupId>
+  <groupId>NPanday.ITs.NPANDAY_488_MSDeployPackageSimpleWebApp</groupId>
   <artifactId>HelloWorld_WebRole</artifactId>
   <packaging>dotnet-library</packaging>
   <version>1.0.0-SNAPSHOT</version>
 
   <name>NPanday.ITs.NPANDAY_488_MSDeployPackageSimpleWebApp :: Hello World Web Role</name>
+
+  <properties>
+    <frameworkVersion>4.0</frameworkVersion>
+  </properties>
 
   <profiles>
     <profile>
@@ -28,7 +32,7 @@
         </property>
       </activation>
       <properties>
-        <npanday.version>1.5.0-azuresupport-SNAPSHOT</npanday.version>
+        <npanday.version>1.5.0-incubating-SNAPSHOT</npanday.version>
       </properties>
       <build>
         <pluginManagement>
@@ -61,81 +65,30 @@
         <extensions>true</extensions>
       </plugin>
       <plugin>
-        <artifactId>maven-assembly-plugin</artifactId>
-        <version>2.2.1</version>
+        <groupId>org.apache.npanday.plugins</groupId>
+        <artifactId>aspnet-maven-plugin</artifactId>
+        <version>${npanday.version}</version>
         <executions>
           <execution>
-            <id>assemble</id>
+            <id>prepare-package</id>
             <phase>prepare-package</phase>
             <goals>
-              <goal>single</goal>
+              <goal>assemble-package-files</goal>
             </goals>
-            <configuration>
-              <finalName>prepare-package</finalName>
-              <appendAssemblyId>false</appendAssemblyId>
-              <attach>false</attach>
-              <descriptors>
-                <descriptor>assembly.xml</descriptor>
-              </descriptors>
-            </configuration>
           </execution>
         </executions>
       </plugin>
       <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>exec-maven-plugin</artifactId>
-        <version>1.2.1</version>
+        <groupId>org.apache.npanday.plugins</groupId>
+        <artifactId>msdeploy-maven-plugin</artifactId>
+        <version>${npanday.version}</version>
         <executions>
           <execution>
-            <id>xdt-transform</id>
-            <phase>prepare-package</phase>
-            <goals>
-              <goal>exec</goal>
-            </goals>
-            <configuration>
-              <executable>msbuild</executable>
-              <arguments>
-                <argument>copy-transformed.xml</argument>
-                <argument>/p:WorkDirectory=${build.directory}/prepare-package</argument>
-              </arguments>
-            </configuration>
-          </execution>
-          <execution>
-            <id>msbuild</id>
+            <id>create-msdeploy-package</id>
             <phase>package</phase>
             <goals>
-              <goal>exec</goal>
+              <goal>create-package</goal>
             </goals>
-            <configuration>
-              <executable>msdeploy</executable>
-              <arguments>
-                <argument>-verb:sync</argument>
-                <argument>-source:dirPath=${build.directory}/prepare-package/03-transformed</argument>
-                <argument>-dest:package=${build.directory}/${artifactId}.msdeploy.zip</argument>
-              </arguments>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>build-helper-maven-plugin</artifactId>
-        <version>1.7</version>
-        <executions>
-          <execution>
-            <id>add-msdeploy-package</id>
-            <phase>package</phase>
-            <goals>
-              <goal>attach-artifact</goal>
-            </goals>
-            <configuration>
-              <artifacts>
-                <artifact>
-                  <file>${build.directory}/${artifactId}.msdeploy.zip</file>
-                  <type>msdeploy-package</type>
-                </artifact>
-              </artifacts>
-            </configuration>
           </execution>
         </executions>
       </plugin>
