--- a/src/test/resources/NPANDAY_480_AzureSupportOneWebRole/HelloWorld_WebRole/pom.xml
+++ b/src/test/resources/NPANDAY_480_AzureSupportOneWebRole/HelloWorld_WebRole/pom.xml
@@ -7,8 +7,8 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>NPanday.ITs.NPANDAY_480</groupId>
-    <artifactId>NPANDAY_480_AzureCloudService-parent</artifactId>
+    <groupId>NPanday.ITs.NPANDAY_480_AzureSupportOneWebRole</groupId>
+    <artifactId>NPANDAY_480_AzureSupportOneWebRole-parent</artifactId>
     <version>1-SNAPSHOT</version>
   </parent>
 
@@ -16,7 +16,7 @@
   <packaging>dotnet-library</packaging>
   <version>1.0.0-SNAPSHOT</version>
 
-  <name>NPanday.ITs.NPANDAY_480 :: Hello World Web Role</name>
+  <name>NPanday.ITs.NPANDAY_480_AzureSupportOneWebRole :: Hello World Web Role</name>
 
   <build>
     <sourceDirectory>.</sourceDirectory>
@@ -24,84 +24,32 @@
       <plugin>
         <groupId>org.apache.npanday.plugins</groupId>
         <artifactId>maven-compile-plugin</artifactId>
+        <version>${npanday.version}</version>
         <extensions>true</extensions>
       </plugin>
       <plugin>
-        <artifactId>maven-assembly-plugin</artifactId>
-        <version>2.2.1</version>
+        <groupId>org.apache.npanday.plugins</groupId>
+        <artifactId>aspnet-maven-plugin</artifactId>
         <executions>
           <execution>
-            <id>assemble</id>
+            <id>prepare-package</id>
             <phase>prepare-package</phase>
             <goals>
-              <goal>single</goal>
+              <goal>assemble-package-files</goal>
             </goals>
-            <configuration>
-              <finalName>prepare-package</finalName>
-              <appendAssemblyId>false</appendAssemblyId>
-              <attach>false</attach>
-              <descriptors>
-                <descriptor>assembly.xml</descriptor>
-              </descriptors>
-            </configuration>
           </execution>
         </executions>
       </plugin>
       <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>exec-maven-plugin</artifactId>
-        <version>1.2.1</version>
+        <groupId>org.apache.npanday.plugins</groupId>
+        <artifactId>msdeploy-maven-plugin</artifactId>
         <executions>
           <execution>
-            <id>xdt-transform</id>
-            <phase>prepare-package</phase>
-            <goals>
-              <goal>exec</goal>
-            </goals>
-            <configuration>
-              <executable>msbuild</executable>
-              <arguments>
-                <argument>copy-transformed.xml</argument>
-                <argument>/p:WorkDirectory=${build.directory}/prepare-package</argument>
-              </arguments>
-            </configuration>
-          </execution>
-          <execution>
-            <id>msbuild</id>
+            <id>create-msdeploy-package</id>
             <phase>package</phase>
             <goals>
-              <goal>exec</goal>
+              <goal>create-package</goal>
             </goals>
-            <configuration>
-              <executable>msdeploy</executable>
-              <arguments>
-                <argument>-verb:sync</argument>
-                <argument>-source:dirPath=${build.directory}/prepare-package/03-transformed</argument>
-                <argument>-dest:package=${build.directory}/${artifactId}.msdeploy.zip</argument>
-              </arguments>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>build-helper-maven-plugin</artifactId>
-        <version>1.7</version>
-        <executions>
-          <execution>
-            <id>add-msdeploy-package</id>
-            <phase>package</phase>
-            <goals>
-              <goal>attach-artifact</goal>
-            </goals>
-            <configuration>
-              <artifacts>
-                <artifact>
-                  <file>${build.directory}/${artifactId}.msdeploy.zip</file>
-                  <type>msdeploy-package</type>
-                </artifact>
-              </artifacts>
-            </configuration>
           </execution>
         </executions>
       </plugin>
