fix line endings
git-svn-id: https://svn.apache.org/repos/asf/incubator/npanday/npanday-its/trunk@1222543 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -172,7 +172,7 @@ under the License.
             <version>0.8</version>
             <configuration>
               <excludes>
-                <exclude>.gitignore</exclude>
+                <exclude>.git*</exclude>
                 <exclude>.idea/**</exclude>
                 <exclude>**/**.md5</exclude>
                 <exclude>**/**.sha1</exclude>
