--- a/src/test/resources/NPANDAY_377_WithCustomNPandaySettingsDirectoryTest/NPANDAY_377_WithNPandaySettingsPathTest/pom.xml
+++ b/src/test/resources/NPANDAY_377_WithCustomNPandaySettingsDirectoryTest/NPANDAY_377_WithNPandaySettingsPathTest/pom.xml
@@ -34,7 +34,7 @@
     <sourceDirectory>./</sourceDirectory>
     <plugins>
       <plugin>
-        <groupId>npanday.plugin</groupId>
+        <groupId>org.apache.npanday.plugins</groupId>
         <artifactId>maven-compile-plugin</artifactId>
         <extensions>true</extensions>
         <configuration>
