--- a/src/test/resources/NPANDAY_480_AzureSupportOneWebRole/HelloWorld/pom.xml
+++ b/src/test/resources/NPANDAY_480_AzureSupportOneWebRole/HelloWorld/pom.xml
@@ -71,11 +71,16 @@
       <plugin>
         <groupId>org.apache.npanday.plugins</groupId>
         <artifactId>azure-maven-plugin</artifactId>
-        <configuration>
-
-        </configuration>
         <executions>
           <execution>
+            <id>default-process-cloud-service-configuration</id>
+            <phase>prepare-package</phase>
+            <goals>
+              <goal>process-cloud-service-configuration</goal>
+            </goals>
+          </execution>
+          <execution>
+            <id>default-create-cloud-service-package</id>
             <phase>package</phase>
             <goals>
               <goal>create-cloud-service-package</goal>
