[NPANDAY-480] Support Windows Azure Cloud Service Project and Packaging (CCPack)
o added its for worker roles support

git-svn-id: https://svn.apache.org/repos/asf/incubator/npanday/npanday-its/trunk@1225517 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/test/resources/NPANDAY_480_AzureSupportOneWebRole/HelloWorld_WebRole/pom.xml
+++ b/src/test/resources/NPANDAY_480_AzureSupportOneWebRole/HelloWorld_WebRole/pom.xml
@@ -51,8 +51,6 @@
         <artifactId>aspnet-maven-plugin</artifactId>
         <executions>
           <execution>
-            <id>prepare-package</id>
-            <phase>prepare-package</phase>
             <goals>
               <goal>assemble-package-files</goal>
             </goals>
@@ -64,10 +62,8 @@
         <artifactId>msdeploy-maven-plugin</artifactId>
         <executions>
           <execution>
-            <id>create-msdeploy-package</id>
-            <phase>package</phase>
             <goals>
-              <goal>create-package</goal>
+              <goal>package</goal>
             </goals>
           </execution>
         </executions>
