[NPANDAY-480] Support Windows Azure Cloud Service Project and Packaging (CCPack)
o updated its

git-svn-id: https://svn.apache.org/repos/asf/incubator/npanday/npanday-its/trunk@1225602 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/test/resources/NPANDAY_480_AzureSupportOneWebRole/HelloWorld_WebRole/HelloWorld_WebRole.csproj
+++ b/src/test/resources/NPANDAY_480_AzureSupportOneWebRole/HelloWorld_WebRole/HelloWorld_WebRole.csproj
@@ -61,6 +61,7 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
+    <Content Include="web.package.config" />
     <None Include="Properties\Packaging\ChainedXdtTransform.targets" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
