--- a/src/test/resources/BootstrapTest/pom.xml
+++ b/src/test/resources/BootstrapTest/pom.xml
@@ -141,7 +141,40 @@
           <artifactId>wix-maven-plugin</artifactId>
           <version>${npanday.version}</version>
         </plugin>
+        <plugin>
+          <groupId>org.apache.npanday.plugins</groupId>
+          <artifactId>custom-lifecycle-maven-plugin</artifactId>
+          <version>${npanday.version}</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.npanday.plugins</groupId>
+          <artifactId>msdeploy-maven-plugin</artifactId>
+          <version>${npanday.version}</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.npanday.plugins</groupId>
+          <artifactId>azure-maven-plugin</artifactId>
+          <version>${npanday.version}</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.npanday.plugins</groupId>
+          <artifactId>aspnet-maven-plugin</artifactId>
+          <version>${npanday.version}</version>
+        </plugin>
       </plugins>
     </pluginManagement>
   </build>
+  <profiles>
+    <profile>
+      <id>standalone</id>
+      <activation>
+        <property>
+          <name>!npanday.version</name>
+        </property>
+      </activation>
+      <properties>
+        <npanday.version>1.5.0-incubating-SNAPSHOT</npanday.version>
+      </properties>
+    </profile>
+  </profiles>
 </project>
